syntax = "proto2";

option java_package = "xyz.steelhoss.jetfire.api";
option swift_prefix = "JetFire";

////////////////////////////////////////////////////////////////////////////////////////
////////// Value classes & Enums
////////////////////////////////////////////////////////////////////////////////////////

message Timestamp {
    // Unix timestamp (milliseconds)
    required int64 value = 1;
}

message EventType {
    // 0 - custom
    // 1 - first_launch
    // 2 - application_start
    // 3 - application_shutdown
    // 4 - feature_open
    // 5 - feature_close
    // 6 - feature_use
    // 7 - story_open
    // 8 - story_tap
    // 9 - story_close
    // 10 - push_show
    // 11 - push_tap
    // 12 - push_close
    // 13 - toaster_show
    // 14 - toaster_tap
    // 15 - toaster_close
    // 16 - feature_accepted
    required int64 value = 1;
}

message ActionType {
    // 1 – deeplink
    // 2 – stories
    required int64 value = 1;
}

////////////////////////////////////////////////////////////////////////////////////////
////////// Entities
////////////////////////////////////////////////////////////////////////////////////////

message AnyValue {
    reserved 1 to 100;
    optional int32 int = 101;
    optional int64 long = 102;
    optional double double = 103;
    optional bool bool = 104;
    optional string string = 105;
    optional string json = 106;
    optional bytes bytes = 107;
}

message Location {
    required double lat = 1;
    required double lon = 2;
}

message Screen {
    required int32 width = 1;
    required int32 height = 2;
    required int32 dpi = 3;
}

message Property {
    required string name = 1;
    required AnyValue value = 2;
}

message Image {
    optional string preview_url = 1;
    required string url = 2; // base url, url for other screens will be down there
}

message Action {
    required ActionType type = 1;
    optional string deeplink = 2;
}

message Schedule {
    optional Timestamp at_time = 1;
    optional int64 after = 2; // seconds
}

////////////////////////////////////////////////////////////////////////////////////////
////////// Models Entities
////////////////////////////////////////////////////////////////////////////////////////

message PropertySet {
    required string name = 1;
    required AnyValue value = 2;
}

message PropertyRemove {
    required string name = 1;
}

message PropertyIncrement {
    required string name = 1;
    required double increment = 2;
}

message PropertyDecrement {
    required string name = 1;
    required double decrement = 2;
}

message PropertyOperation {
    reserved 1;
    oneof operation {
        PropertySet set = 2;
        PropertyRemove remove = 3;
        PropertyIncrement increment = 4;
        PropertyDecrement decrement = 5;
    }
}

message App {
    reserved 1;
    required string version = 2;
}

message Sdk {
    reserved 1;
    required string version = 2;
}

message Device {
    reserved 1;
    required string platform = 2; // ios, android
    required string vendor = 3; // apple
    required string model = 4; // iphone,13
    required string os = 5; // ios
    required string os_version = 6; // 14.1.1
    optional string firmware = 7; // for android
    required string language = 8; // ru
    required string locale = 9; // ru_RU
    required string time_zone = 10; // Europe/Moscow
    repeated string carrier = 11;
    required Screen screen = 12;
}

message RequestUser {
    reserved 1;
    required string uuid = 2;
}

message User {
    reserved 1;
    required string uuid = 2;
    repeated Property properties = 3;
}

message RequestSession {
    reserved 1;
    required string uuid = 2;
}

message Session {
    reserved 1;
    required string uuid = 2;
    required Timestamp timestamp = 3; // milliseconds
    required App app = 4;
    required Sdk sdk = 5;
    required Device device = 6;
    optional Location location = 7;
    repeated Property properties = 8;
}

message FeaturesSql {
    reserved 1;
    required string stories = 2;
    required string trigger = 3;
}

message FeatureButton {
    reserved 1;
    optional string title = 2;
    optional Action action = 3;
}

message FeaturePush {
    reserved 1;
    optional string title = 2;
    optional string subtitle = 3;
    optional string message = 4;
    optional Image image = 5;
    optional FeatureButton action_button = 6;
    optional Schedule schedule = 7;
    optional Schedule expire = 8;
}

message FeatureToaster {
    reserved 1;
    optional string title = 2;
    optional string subtitle = 3;
    optional string message = 4;
    optional Image image = 5;
    optional FeatureButton action_button = 6;
    optional FeatureButton hide_button = 7;
    optional Schedule schedule = 8;
    optional Schedule expire = 9;
}

message FeatureStoryFrameBackground {
    optional string color = 1;
}

message FeatureStoryFrameFont {
    optional string color = 1;
}

message FeatureStoryCover {
    reserved 1;
    optional Image image = 2;
    optional string title = 3;
}

message FeatureStorySettings {
    reserved 1;
    required bool always_rewind = 2;
    required int64 after_read_expire = 3; // seconds
}

message FeatureStoryFrame {
    required int64 id = 1;
    optional string title = 2;
    optional string subtitle = 3;
    optional string message = 4;
    optional Image image = 5;
    optional FeatureStoryFrameBackground background = 6;
    optional FeatureStoryFrameFont font = 7;
    optional FeatureButton action_button = 8;
    optional FeatureButton hide_button = 9;
    required double duration = 10;
}

message FeatureStory {
    required int64 id = 1;
    optional FeatureStoryCover cover = 2;
    repeated FeatureStoryFrame frames = 3;
    optional Schedule schedule = 4;
    optional Schedule expire = 5;
    required FeatureStorySettings settings = 6;
    required int64 priority = 7;
}

message FeatureData {
    reserved 1;
    required bytes data = 2;
    optional Schedule schedule = 3;
    optional Schedule expire = 4;
}

////////////////////////////////////////////////////////////////////////////////////////
////////// Models
////////////////////////////////////////////////////////////////////////////////////////

message Event {
    reserved 1;
    required string uuid = 2;
    required Timestamp timestamp = 3; // milliseconds
    required EventType event_type = 4;
    optional string custom_event = 5;
    optional string feature = 6;
    optional int64 campaign_id = 7;
    optional int64 entity_id = 8; // story_id, ...
    repeated Property properties = 9;
}

message Campaign {
    required int64 id = 1;
    optional FeaturePush push = 2;
    optional FeatureToaster toaster = 3;
    repeated FeatureStory stories = 4;
    optional FeatureData data = 5;
    required int32 priority = 6;
}

////////////////////////////////////////////////////////////////////////////////////////
////////// Requests
////////////////////////////////////////////////////////////////////////////////////////

message ListCampaignsRequest {
    reserved 1;
    required User user = 3;
    required Session session = 4;
}

message UpdateUserProperties {
    reserved 1;
    required RequestUser user = 2;
    required RequestSession session = 3;
    repeated PropertyOperation property_operations = 4;
}

message UpdateSessionProperties {
    reserved 1;
    required RequestUser user = 2;
    required RequestSession session = 3;
    repeated PropertyOperation property_operations = 4;
}

message RegisterEventsRequest {
    reserved 1;
    required RequestUser user = 2;
    required RequestSession session = 3;
    repeated Event events = 4;
}

////////////////////////////////////////////////////////////////////////////////////////
////////// Responses
////////////////////////////////////////////////////////////////////////////////////////

message ListCampaignsResponse {
    reserved 1;
    required int32 total = 2;
    repeated Campaign campaigns = 3;
    required FeaturesSql sql = 4;
}

////////////////////////////////////////////////////////////////////////////////////////
////////// Base Responses
////////////////////////////////////////////////////////////////////////////////////////

message OkResponse {
    reserved 1;
    required int32 code = 2;
}

message ErrorResponse {
    reserved 1;
    required int32 code = 2;
    required string message = 3;
    optional string system_message = 4;
    required string type = 5;
}

////////////////////////////////////////////////////////////////////////////////////////
////////// Internal Models
////////////////////////////////////////////////////////////////////////////////////////

message Jwt {
    reserved 1;
    required string token = 2;
}

message Request {
    reserved 1;
    optional string ip = 2;
}

message RegisterUserAndSessionMessage {
    reserved 1;
    required Jwt jwt = 2;
    required string salt = 3;
    required Request request = 4;
    required User user = 5;
    required Session session = 6;
}

message UpdateUserPropertiesMessage {
    reserved 1;
    required Jwt jwt = 2;
    required string salt = 3;
    required Request request = 4;
    required RequestUser user = 5;
    required RequestSession session = 6;
    repeated PropertyOperation property_operations = 7;
}

message UpdateSessionPropertiesMessage {
    reserved 1;
    required Jwt jwt = 2;
    required string salt = 3;
    required Request request = 4;
    required RequestUser user = 5;
    required RequestSession session = 6;
    repeated PropertyOperation property_operations = 7;
}

message EventMessage {
    reserved 1;
    required Jwt jwt = 2;
    required string salt = 3;
    required Request request = 4;
    required RequestUser user = 5;
    required RequestSession session = 6;
    required Event event = 7;
}

////////////////////////////////////////////////////////////////////////////////////////
////////// End.
////////////////////////////////////////////////////////////////////////////////////////
